--- a/style.css
+++ b/style.css
@@ -8,7 +8,15 @@ h2 {
 #img-div {
   text-align: center;
 }
-#tribute-info {
+#img-caption{
+
+}
+#tribute-info, #link {
   text-align: center;
-  
+  line-height: 2em;
+  width: 45em;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
 }
